cmake_minimum_required(VERSION 3.3)
project(tpcemysql)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    inc/win/DBLoader.h
    inc/win/error.h
    inc/win/ODBCAccountPermissionLoad.h
    inc/win/ODBCAddressLoad.h
    inc/win/ODBCBrokerLoad.h
    inc/win/ODBCCashTransactionLoad.h
    inc/win/ODBCChargeLoad.h
    inc/win/ODBCCommissionRateLoad.h
    inc/win/ODBCCompanyCompetitorLoad.h
    inc/win/ODBCCompanyLoad.h
    inc/win/ODBCCustomerAccountLoad.h
    inc/win/ODBCCustomerLoad.h
    inc/win/ODBCCustomerTaxrateLoad.h
    inc/win/ODBCDailyMarketLoad.h
    inc/win/ODBCExchangeLoad.h
    inc/win/ODBCFinancialLoad.h
    inc/win/ODBCHoldingHistoryLoad.h
    inc/win/ODBCHoldingLoad.h
    inc/win/ODBCHoldingSummaryLoad.h
    inc/win/ODBCIndustryLoad.h
    inc/win/ODBCLastTradeLoad.h
    inc/win/ODBCLoad_stdafx.h
    inc/win/ODBCLoaderFactory.h
    inc/win/ODBCNewsItemLoad.h
    inc/win/ODBCNewsXRefLoad.h
    inc/win/ODBCSectorLoad.h
    inc/win/ODBCSecurityLoad.h
    inc/win/ODBCSettlementLoad.h
    inc/win/ODBCStatusTypeLoad.h
    inc/win/ODBCTaxrateLoad.h
    inc/win/ODBCTradeHistoryLoad.h
    inc/win/ODBCTradeLoad.h
    inc/win/ODBCTradeRequestLoad.h
    inc/win/ODBCTradeTypeLoad.h
    inc/win/ODBCWatchItemLoad.h
    inc/win/ODBCWatchListLoad.h
    inc/win/ODBCZipCodeLoad.h
    inc/AddressTable.h
    inc/BaseLoader.h
    inc/BaseLoaderFactory.h
    inc/BaseLogFormatter.h
    inc/BaseLogger.h
    inc/BigMath.h
    inc/Brokers.h
    inc/BrokerVolumeDB.h
    inc/bucketsimulator.h
    inc/CE.h
    inc/CESUT.h
    inc/CESUTInterface.h
    inc/CETxnInputGenerator.h
    inc/CETxnMixGenerator.h
    inc/ChargeTable.h
    inc/CommissionRateTable.h
    inc/CompanyCompetitorFile.h
    inc/CompanyCompetitorTable.h
    inc/CompanyFile.h
    inc/CompanyTable.h
    inc/CustomerAccountsAndPermissionsTable.h
    inc/CustomerPositionDB.h
    inc/CustomerSelection.h
    inc/CustomerTable.h
    inc/CustomerTaxratesTable.h
    inc/DailyMarketTable.h
    inc/DataMaintenanceDB.h
    inc/DateTime.h
    inc/DBConnection.h
    inc/DM.h
    inc/DMSUT.h
    inc/DMSUTInterface.h
    inc/DriverParamSettings.h
    inc/DriverTypes.h
    inc/EGenBaseLoader_stdafx.h
    inc/EGenError.h
    inc/EGenGenerateAndLoad.h
    inc/EGenGenerateAndLoad_stdafx.h
    inc/EGenGenerateAndLoadBaseOutput.h
    inc/EGenGenerateAndLoadStandardOutput.h
    inc/EGenLoader_stdafx.h
    inc/EGenLogFormatterTab.h
    inc/EGenLogger.h
    inc/EGenNullLoader_stdafx.h
    inc/EGenNullLogger.h
    inc/EGenSimpleTest.h
    inc/EGenStandardTypes.h
    inc/EGenTables_common.h
    inc/EGenTables_stdafx.h
    inc/EGenUtilities_stdafx.h
    inc/EGenVersion.h
    inc/error.h
    inc/ExchangeTable.h
    inc/FinancialTable.h
    inc/FixedArray.h
    inc/FixedMap.h
    inc/FlatAccountPermissionLoad.h
    inc/FlatAddressLoad.h
    inc/FlatBrokerLoad.h
    inc/FlatCashTransactionLoad.h
    inc/FlatChargeLoad.h
    inc/FlatCommissionRateLoad.h
    inc/FlatCompanyCompetitorLoad.h
    inc/FlatCompanyLoad.h
    inc/FlatCustomerAccountLoad.h
    inc/FlatCustomerLoad.h
    inc/FlatCustomerTaxrateLoad.h
    inc/FlatDailyMarketLoad.h
    inc/FlatExchangeLoad.h
    inc/FlatFile.h
    inc/FlatFileLoad_common.h
    inc/FlatFileLoad_stdafx.h
    inc/FlatFileLoader.h
    inc/FlatFinancialLoad.h
    inc/FlatHoldingHistoryLoad.h
    inc/FlatHoldingLoad.h
    inc/FlatHoldingSummaryLoad.h
    inc/FlatIndustryLoad.h
    inc/FlatLastTradeLoad.h
    inc/FlatLoaderFactory.h
    inc/FlatNewsItemLoad.h
    inc/FlatNewsXRefLoad.h
    inc/FlatSectorLoad.h
    inc/FlatSecurityLoad.h
    inc/FlatSettlementLoad.h
    inc/FlatStatusTypeLoad.h
    inc/FlatTaxrateLoad.h
    inc/FlatTradeHistoryLoad.h
    inc/FlatTradeLoad.h
    inc/FlatTradeRequestLoad.h
    inc/FlatTradeTypeLoad.h
    inc/FlatWatchItemLoad.h
    inc/FlatWatchListLoad.h
    inc/FlatZipCodeLoad.h
    inc/HoldingsAndTradesTable.h
    inc/IndustryTable.h
    inc/InputFile.h
    inc/InputFileNoWeight.h
    inc/InputFlatFilesDeclarations.h
    inc/InputFlatFilesStructure.h
    inc/LastTradeTable.h
    inc/locking.h
    inc/MarketFeedDB.h
    inc/MarketWatchDB.h
    inc/MEE.h
    inc/MEEPriceBoard.h
    inc/MEESecurity.h
    inc/MEESUT.h
    inc/MEESUTInterface.h
    inc/MEETickerTape.h
    inc/MEETradeRequestActions.h
    inc/MEETradingFloor.h
    inc/MiscConsts.h
    inc/Money.h
    inc/NewsItemAndXRefTable.h
    inc/NullLoad_stdafx.h
    inc/NullLoader.h
    inc/NullLoaderFactory.h
    inc/odbc_wrapper.h
    inc/ODBCERR.h
    inc/Person.h
    inc/progressmeter.h
    inc/progressmeterinterface.h
    inc/Random.h
    inc/RNGSeeds.h
    inc/RtHistogram.h
    inc/SectorTable.h
    inc/SecurityDetailDB.h
    inc/SecurityFile.h
    inc/SecurityPriceRange.h
    inc/SecurityTable.h
    inc/SendToMarket.h
    inc/StatusTypeTable.h
    inc/strutil.h
    inc/Table_Defs.h
    inc/TableConsts.h
    inc/TableTemplate.h
    inc/TaxrateTable.h
    inc/threading.h
    inc/TimerWheel.h
    inc/TimerWheelTimer.h
    inc/TradeCleanupDB.h
    inc/TradeGen.h
    inc/TradeLookupDB.h
    inc/TradeOrderDB.h
    inc/TradeResultDB.h
    inc/TradeStatusDB.h
    inc/TradeTypeIDs.h
    inc/TradeTypeTable.h
    inc/TradeUpdateDB.h
    inc/TxnDBBase.h
    inc/TxnHarnessBrokerVolume.h
    inc/TxnHarnessCustomerPosition.h
    inc/TxnHarnessDataMaintenance.h
    inc/TxnHarnessDBInterface.h
    inc/TxnHarnessMarketFeed.h
    inc/TxnHarnessMarketWatch.h
    inc/TxnHarnessSecurityDetail.h
    inc/TxnHarnessSendToMarketInterface.h
    inc/TxnHarnessStructs.h
    inc/TxnHarnessTradeCleanup.h
    inc/TxnHarnessTradeLookup.h
    inc/TxnHarnessTradeOrder.h
    inc/TxnHarnessTradeResult.h
    inc/TxnHarnessTradeStatus.h
    inc/TxnHarnessTradeUpdate.h
    inc/unusedflag.h
    inc/WatchListsAndItemsTable.h
    inc/Wheel.h
    inc/WheelTime.h
    inc/ZipCodeTable.h
    src/win/DBLoader.cpp
    src/AddressTable.cpp
    src/BaseLogger.cpp
    src/BrokerVolumeDB.cpp
    src/bucketsimulator.cpp
    src/CE.cpp
    src/CESUT.cpp
    src/CETxnInputGenerator.cpp
    src/CETxnMixGenerator.cpp
    src/CustomerPositionDB.cpp
    src/CustomerSelection.cpp
    src/CustomerTable.cpp
    src/DataMaintenanceDB.cpp
    src/DateTime.cpp
    src/DBConnection.cpp
    src/DM.cpp
    src/DMSUT.cpp
    src/EGenGenerateAndLoad.cpp
    src/EGenLoader.cpp
    src/EGenLogFormatterTab.cpp
    src/EGenSimpleTest.cpp
    src/EGenValidate.cpp
    src/EGenVersion.cpp
    src/error.cpp
    src/FlatFileLoader.cpp
    src/InputFlatFilesStructure.cpp
    src/locking.cpp
    src/MarketFeedDB.cpp
    src/MarketWatchDB.cpp
    src/MEE.cpp
    src/MEEPriceBoard.cpp
    src/MEESecurity.cpp
    src/MEESUT.cpp
    src/MEETickerTape.cpp
    src/MEETradingFloor.cpp
    src/Money.cpp
    src/odbc_wrapper.cpp
    src/Person.cpp
    src/progressmeter.cpp
    src/progressmeterinterface.cpp
    src/Random.cpp
    src/ReadRowFunctions.cpp
    src/ReadRowFunctions_istream.cpp
    src/ReadRowFunctions_sscanf.cpp
    src/RtHistogram.cpp
    src/SecurityDetailDB.cpp
    src/SendToMarket.cpp
    src/strutil.cpp
    src/threading.cpp
    src/TradeCleanupDB.cpp
    src/TradeGen.cpp
    src/TradeLookupDB.cpp
    src/TradeOrderDB.cpp
    src/TradeResultDB.cpp
    src/TradeStatusDB.cpp
    src/TradeUpdateDB.cpp
    src/TxnDBBase.cpp
    src/WheelTime.cpp
    TestHarness/EGenTest/inc/EGenBaseTestSuite.h
    TestHarness/EGenTest/inc/EGenTestError.h
    TestHarness/EGenTest/inc/EGenTestHarness.h
    TestHarness/EGenTest/inc/EGenTestLoader.h
    TestHarness/EGenTest/inc/EGenTestSuiteOne.h
    TestHarness/EGenTest/inc/EGenTestSuites_stdafx.h
    TestHarness/EGenTest/inc/EGenTestSuiteTwo.h
    TestHarness/EGenTest/inc/EGenTestSUT.h
    TestHarness/EGenTest/src/EGenTest.cpp
    TestHarness/EGenTest/src/EGenTestHarness.cpp
    TestHarness/EGenTest/src/EGenTestSuiteOne.cpp
    TestHarness/EGenTest/src/EGenTestSuiteTwo.cpp
    TestHarness/EGenTest/src/EGenTestSUT.cpp
    TestHarness/Reference/inc/win/DBLoader.h
    TestHarness/Reference/inc/win/error.h
    TestHarness/Reference/inc/win/ODBCAccountPermissionLoad.h
    TestHarness/Reference/inc/win/ODBCAddressLoad.h
    TestHarness/Reference/inc/win/ODBCBrokerLoad.h
    TestHarness/Reference/inc/win/ODBCCashTransactionLoad.h
    TestHarness/Reference/inc/win/ODBCChargeLoad.h
    TestHarness/Reference/inc/win/ODBCCommissionRateLoad.h
    TestHarness/Reference/inc/win/ODBCCompanyCompetitorLoad.h
    TestHarness/Reference/inc/win/ODBCCompanyLoad.h
    TestHarness/Reference/inc/win/ODBCCustomerAccountLoad.h
    TestHarness/Reference/inc/win/ODBCCustomerLoad.h
    TestHarness/Reference/inc/win/ODBCCustomerTaxrateLoad.h
    TestHarness/Reference/inc/win/ODBCDailyMarketLoad.h
    TestHarness/Reference/inc/win/ODBCExchangeLoad.h
    TestHarness/Reference/inc/win/ODBCFinancialLoad.h
    TestHarness/Reference/inc/win/ODBCHoldingHistoryLoad.h
    TestHarness/Reference/inc/win/ODBCHoldingLoad.h
    TestHarness/Reference/inc/win/ODBCHoldingSummaryLoad.h
    TestHarness/Reference/inc/win/ODBCIndustryLoad.h
    TestHarness/Reference/inc/win/ODBCLastTradeLoad.h
    TestHarness/Reference/inc/win/ODBCLoad_stdafx.h
    TestHarness/Reference/inc/win/ODBCLoaderFactory.h
    TestHarness/Reference/inc/win/ODBCNewsItemLoad.h
    TestHarness/Reference/inc/win/ODBCNewsXRefLoad.h
    TestHarness/Reference/inc/win/ODBCSectorLoad.h
    TestHarness/Reference/inc/win/ODBCSecurityLoad.h
    TestHarness/Reference/inc/win/ODBCSettlementLoad.h
    TestHarness/Reference/inc/win/ODBCStatusTypeLoad.h
    TestHarness/Reference/inc/win/ODBCTaxrateLoad.h
    TestHarness/Reference/inc/win/ODBCTradeHistoryLoad.h
    TestHarness/Reference/inc/win/ODBCTradeLoad.h
    TestHarness/Reference/inc/win/ODBCTradeRequestLoad.h
    TestHarness/Reference/inc/win/ODBCTradeTypeLoad.h
    TestHarness/Reference/inc/win/ODBCWatchItemLoad.h
    TestHarness/Reference/inc/win/ODBCWatchListLoad.h
    TestHarness/Reference/inc/win/ODBCZipCodeLoad.h
    TestHarness/Reference/inc/win/SyncLock.h
    TestHarness/Reference/inc/AddressTable.h
    TestHarness/Reference/inc/BaseLoader.h
    TestHarness/Reference/inc/BaseLoaderFactory.h
    TestHarness/Reference/inc/BaseLogFormatter.h
    TestHarness/Reference/inc/BaseLogger.h
    TestHarness/Reference/inc/Brokers.h
    TestHarness/Reference/inc/bucketsimulator.h
    TestHarness/Reference/inc/CE.h
    TestHarness/Reference/inc/CESUTInterface.h
    TestHarness/Reference/inc/CETxnInputGenerator.h
    TestHarness/Reference/inc/CETxnMixGenerator.h
    TestHarness/Reference/inc/ChargeTable.h
    TestHarness/Reference/inc/CommissionRateTable.h
    TestHarness/Reference/inc/CompanyCompetitorFile.h
    TestHarness/Reference/inc/CompanyCompetitorTable.h
    TestHarness/Reference/inc/CompanyFile.h
    TestHarness/Reference/inc/CompanyTable.h
    TestHarness/Reference/inc/CustomerAccountsAndPermissionsTable.h
    TestHarness/Reference/inc/CustomerSelection.h
    TestHarness/Reference/inc/CustomerTable.h
    TestHarness/Reference/inc/CustomerTaxratesTable.h
    TestHarness/Reference/inc/DailyMarketTable.h
    TestHarness/Reference/inc/DateTime.h
    TestHarness/Reference/inc/DM.h
    TestHarness/Reference/inc/DMSUTInterface.h
    TestHarness/Reference/inc/DriverParamSettings.h
    TestHarness/Reference/inc/DriverTypes.h
    TestHarness/Reference/inc/EGenBaseLoader_stdafx.h
    TestHarness/Reference/inc/EGenError.h
    TestHarness/Reference/inc/EGenGenerateAndLoad.h
    TestHarness/Reference/inc/EGenGenerateAndLoad_stdafx.h
    TestHarness/Reference/inc/EGenGenerateAndLoadBaseOutput.h
    TestHarness/Reference/inc/EGenGenerateAndLoadStandardOutput.h
    TestHarness/Reference/inc/EGenLoader_stdafx.h
    TestHarness/Reference/inc/EGenLogFormatterTab.h
    TestHarness/Reference/inc/EGenLogger.h
    TestHarness/Reference/inc/EGenNullLoader_stdafx.h
    TestHarness/Reference/inc/EGenStandardTypes.h
    TestHarness/Reference/inc/EGenTables_stdafx.h
    TestHarness/Reference/inc/EGenUtilities_stdafx.h
    TestHarness/Reference/inc/EGenVersion.h
    TestHarness/Reference/inc/error.h
    TestHarness/Reference/inc/ExchangeTable.h
    TestHarness/Reference/inc/FinalTransform.h
    TestHarness/Reference/inc/FinancialTable.h
    TestHarness/Reference/inc/FixedArray.h
    TestHarness/Reference/inc/FixedMap.h
    TestHarness/Reference/inc/FlatAccountPermissionLoad.h
    TestHarness/Reference/inc/FlatAddressLoad.h
    TestHarness/Reference/inc/FlatBrokerLoad.h
    TestHarness/Reference/inc/FlatCashTransactionLoad.h
    TestHarness/Reference/inc/FlatChargeLoad.h
    TestHarness/Reference/inc/FlatCommissionRateLoad.h
    TestHarness/Reference/inc/FlatCompanyCompetitorLoad.h
    TestHarness/Reference/inc/FlatCompanyLoad.h
    TestHarness/Reference/inc/FlatCustomerAccountLoad.h
    TestHarness/Reference/inc/FlatCustomerLoad.h
    TestHarness/Reference/inc/FlatCustomerTaxrateLoad.h
    TestHarness/Reference/inc/FlatDailyMarketLoad.h
    TestHarness/Reference/inc/FlatExchangeLoad.h
    TestHarness/Reference/inc/FlatFile.h
    TestHarness/Reference/inc/FlatFileLoad_stdafx.h
    TestHarness/Reference/inc/FlatFileLoader.h
    TestHarness/Reference/inc/FlatFinancialLoad.h
    TestHarness/Reference/inc/FlatHoldingHistoryLoad.h
    TestHarness/Reference/inc/FlatHoldingLoad.h
    TestHarness/Reference/inc/FlatHoldingSummaryLoad.h
    TestHarness/Reference/inc/FlatIndustryLoad.h
    TestHarness/Reference/inc/FlatLastTradeLoad.h
    TestHarness/Reference/inc/FlatLoaderFactory.h
    TestHarness/Reference/inc/FlatNewsItemLoad.h
    TestHarness/Reference/inc/FlatNewsXRefLoad.h
    TestHarness/Reference/inc/FlatSectorLoad.h
    TestHarness/Reference/inc/FlatSecurityLoad.h
    TestHarness/Reference/inc/FlatSettlementLoad.h
    TestHarness/Reference/inc/FlatStatusTypeLoad.h
    TestHarness/Reference/inc/FlatTaxrateLoad.h
    TestHarness/Reference/inc/FlatTradeHistoryLoad.h
    TestHarness/Reference/inc/FlatTradeLoad.h
    TestHarness/Reference/inc/FlatTradeRequestLoad.h
    TestHarness/Reference/inc/FlatTradeTypeLoad.h
    TestHarness/Reference/inc/FlatWatchItemLoad.h
    TestHarness/Reference/inc/FlatWatchListLoad.h
    TestHarness/Reference/inc/FlatZipCodeLoad.h
    TestHarness/Reference/inc/HoldingsAndTradesTable.h
    TestHarness/Reference/inc/IndustryTable.h
    TestHarness/Reference/inc/InputFile.h
    TestHarness/Reference/inc/InputFileNoWeight.h
    TestHarness/Reference/inc/InputFlatFilesDeclarations.h
    TestHarness/Reference/inc/InputFlatFilesStructure.h
    TestHarness/Reference/inc/LastTradeTable.h
    TestHarness/Reference/inc/MEE.h
    TestHarness/Reference/inc/MEEPriceBoard.h
    TestHarness/Reference/inc/MEESecurity.h
    TestHarness/Reference/inc/MEESUTInterface.h
    TestHarness/Reference/inc/MEETickerTape.h
    TestHarness/Reference/inc/MEETradeRequestActions.h
    TestHarness/Reference/inc/MEETradingFloor.h
    TestHarness/Reference/inc/MiscConsts.h
    TestHarness/Reference/inc/Money.h
    TestHarness/Reference/inc/NewsItemAndXRefTable.h
    TestHarness/Reference/inc/NullLoad_stdafx.h
    TestHarness/Reference/inc/NullLoader.h
    TestHarness/Reference/inc/NullLoaderFactory.h
    TestHarness/Reference/inc/Person.h
    TestHarness/Reference/inc/progressmeter.h
    TestHarness/Reference/inc/progressmeterinterface.h
    TestHarness/Reference/inc/Random.h
    TestHarness/Reference/inc/RNGSeeds.h
    TestHarness/Reference/inc/SectorTable.h
    TestHarness/Reference/inc/SecurityFile.h
    TestHarness/Reference/inc/SecurityPriceRange.h
    TestHarness/Reference/inc/SecurityTable.h
    TestHarness/Reference/inc/StatusTypeTable.h
    TestHarness/Reference/inc/strutil.h
    TestHarness/Reference/inc/SyncLockInterface.h
    TestHarness/Reference/inc/Table_Defs.h
    TestHarness/Reference/inc/TableConsts.h
    TestHarness/Reference/inc/TableTemplate.h
    TestHarness/Reference/inc/TaxrateTable.h
    TestHarness/Reference/inc/threading.h
    TestHarness/Reference/inc/threading_pthread.h
    TestHarness/Reference/inc/threading_single.h
    TestHarness/Reference/inc/TimerWheel.h
    TestHarness/Reference/inc/TimerWheelTimer.h
    TestHarness/Reference/inc/TradeGen.h
    TestHarness/Reference/inc/TradeTypeIDs.h
    TestHarness/Reference/inc/TradeTypeTable.h
    TestHarness/Reference/inc/TxnHarnessBrokerVolume.h
    TestHarness/Reference/inc/TxnHarnessCustomerPosition.h
    TestHarness/Reference/inc/TxnHarnessDataMaintenance.h
    TestHarness/Reference/inc/TxnHarnessDBInterface.h
    TestHarness/Reference/inc/TxnHarnessMarketFeed.h
    TestHarness/Reference/inc/TxnHarnessMarketWatch.h
    TestHarness/Reference/inc/TxnHarnessSecurityDetail.h
    TestHarness/Reference/inc/TxnHarnessSendToMarketInterface.h
    TestHarness/Reference/inc/TxnHarnessStructs.h
    TestHarness/Reference/inc/TxnHarnessTradeCleanup.h
    TestHarness/Reference/inc/TxnHarnessTradeLookup.h
    TestHarness/Reference/inc/TxnHarnessTradeOrder.h
    TestHarness/Reference/inc/TxnHarnessTradeResult.h
    TestHarness/Reference/inc/TxnHarnessTradeStatus.h
    TestHarness/Reference/inc/TxnHarnessTradeUpdate.h
    TestHarness/Reference/inc/unusedflag.h
    TestHarness/Reference/inc/WatchListsAndItemsTable.h
    TestHarness/Reference/inc/Wheel.h
    TestHarness/Reference/inc/WheelTime.h
    TestHarness/Reference/inc/ZipCodeTable.h
    TestHarness/Reference/src/win/DBLoader.cpp
    TestHarness/Reference/src/AddressTable.cpp
    TestHarness/Reference/src/BaseLogger.cpp
    TestHarness/Reference/src/bucketsimulator.cpp
    TestHarness/Reference/src/CE.cpp
    TestHarness/Reference/src/CETxnInputGenerator.cpp
    TestHarness/Reference/src/CETxnMixGenerator.cpp
    TestHarness/Reference/src/CustomerSelection.cpp
    TestHarness/Reference/src/CustomerTable.cpp
    TestHarness/Reference/src/DateTime.cpp
    TestHarness/Reference/src/DM.cpp
    TestHarness/Reference/src/EGenGenerateAndLoad.cpp
    TestHarness/Reference/src/EGenLoader.cpp
    TestHarness/Reference/src/EGenLogFormatterTab.cpp
    TestHarness/Reference/src/EGenValidate.cpp
    TestHarness/Reference/src/EGenVersion.cpp
    TestHarness/Reference/src/error.cpp
    TestHarness/Reference/src/FlatFileLoader.cpp
    TestHarness/Reference/src/InputFlatFilesStructure.cpp
    TestHarness/Reference/src/MEE.cpp
    TestHarness/Reference/src/MEEPriceBoard.cpp
    TestHarness/Reference/src/MEESecurity.cpp
    TestHarness/Reference/src/MEETickerTape.cpp
    TestHarness/Reference/src/MEETradingFloor.cpp
    TestHarness/Reference/src/Money.cpp
    TestHarness/Reference/src/Person.cpp
    TestHarness/Reference/src/progressmeter.cpp
    TestHarness/Reference/src/progressmeterinterface.cpp
    TestHarness/Reference/src/Random.cpp
    TestHarness/Reference/src/ReadRowFunctions.cpp
    TestHarness/Reference/src/ReadRowFunctions_sscanf.cpp
    TestHarness/Reference/src/strutil.cpp
    TestHarness/Reference/src/threading.cpp
    TestHarness/Reference/src/TradeGen.cpp
    TestHarness/Reference/src/WheelTime.cpp
    unittest/tc_checkcompliant.cpp
    unittest/tc_main.cpp
    unittest/tc_securityfile.cpp)

add_executable(tpcemysql ${SOURCE_FILES})